syntax = "proto3";

package mapreduce;

enum CodeExt {
  py = 0;
  bin = 1;
}

message NewNode {
  string connstr = 1;
}

message MapJob {
  int64 job_id = 1;
  string code = 2;
  CodeExt ext = 3;
  string chunk = 4;
}

message ReduceJob {
  int64 job_id = 1;
  string code = 2;
  CodeExt ext = 3;
  string key = 4;
  repeated int32 values = 5;
}

message KeyValuePair {
  string key = 1;
  int32 value = 2;
}

message MappedJob {
  int64 id = 1;
  repeated KeyValuePair pairs = 2;
}

message NewJob {
  string code = 1;
  string data = 2;
}

message Job {
  string chunk = 1;
  int64 id = 2;
}

message Empty {

}

message Task {
  int64 id = 1;
  bytes job = 2;
}

service Master {
  rpc RegisterNode (NewNode) returns (Empty);
  rpc JobStart (NewJob) returns (Empty);
  rpc TaskDone (Task) returns (Empty);
}

service Node {
  rpc StartTask (Task) returns (Empty);
  rpc JobGet (Empty) returns (Job);
  rpc JobMapped (MappedJob) returns (Empty);
}

service Worker {

}
